# algorithmic-trading

./: .env.example  .gitignore  README.md  fetch_data.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py
app/data_preprocessing/: data_loader.py  data_preprocessor.py  process_data.py
app/feature_engineering/: build_labels.py  labeling.py
app/utils/: tools.py
scripts/: fetch_data.py
src/app/: config.py  fetch_data.py
src/app/data_preprocessing/: process_data.py
src/app/feature_engineering/: labeling.py
src/app/utils/: tools.py
tests/app/data_preprocessing/: test_data_preprocessor.py
tests/app/utils/: test_tools.py
