[project]
name = "algorithmic-trading-pipeline-and-model"
version = "0.1.0"
description = "Algorithmic trading data pipeline (using FinanceToolkit) and model."
authors = [
    {name = "Mateusz Grzyb",email = "mwgrzyb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyxirr (>=0.10.7,<0.11.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
